# ai-guardian

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  FINAL_ACCURACY_REPORT.md  PII_EVALUATION_README.md  PII_EVALUATION_SUMMARY.md  accurate_pii_evaluation.json  accurate_pii_evaluation.py  alembic.ini  complex_test_data_with_pii.csv  env  evaluate_pii_performance.py  evaluation_results.json  generate_test_data.py  ingest_rag_data.py  labeled_dataset.json  pyproject.toml  requirements.txt  requirements_evaluation.txt  run_demo.py  simple_pii_evaluation.py  simple_test_data.csv
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  dependencies.py  main.py
backend/app/database/: __init__.py  database.py
backend/app/models/: __init__.py  chat_session.py  conversation.py  file.py  mask_mapping.py  message.py  message_file.py  pii_mapping.py  profile.py  rag_document.py  user.py
backend/app/schemas/: ai.py  chat.py  file.py  mask.py  user.py
backend/app/services/: RAG_service.py  chat_service.py  extraction_service.py  masking_service.py  minio_service.py  notification_service.py  unmasking_service.py
backend/benchmarks/: PII_EVALUATION_README.md  PII_Evaluation_Colab.ipynb  README.md  accurate_pii_evaluation.py  comprehensive_entity_test.py  comprehensive_entity_test_results_20250817_124310.json  comprehensive_pii_evaluation.json  demo_detection_only.py  massive_entity_test.py  massive_entity_test_10000_cases_detection_only_20250817_132109.json  quick_entity_test.py
backend/tests/: test_extraction_service.py
(+48 files in other folders)
