[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A FastAPI backend for my chatbot"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.8.2"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
langchain = "^0.3.0"
langchain-core = "^0.3.68"
langchain-google-genai = "^2.1.9"
langchain-openai = "^0.3.0"
openai = "^1.41.0"
httpx = "^0.27.0"
langchain-community = "^0.3.0"
python-dotenv = "^1.0.1"
supabase = "^2.7.2"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
httplib2 = "^0.22.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.112.1"
uvicorn = "^0.30.6"

[project]
name = "general-document-qa-system"
version = "0.1.0"
description = "General document Q&A system with RAG capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "docling>=2.44.0",
    "fastapi>=0.116.1",
    "fastembed>=0.7.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.5",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]
